vendor/htslib/sam.h

#define ssize_t intptr_t
typedef struct sam_hrecs_t sam_hrecs_t;
typedef struct sam_hdr_t {
  int32_t n_targets, ignore_sam_err;
  size_t l_text;
  uint32_t *target_len;
  const int8_t *cigar_tab HTS_DEPRECATED("Use bam_cigar_table[] instead");
  char **target_name;
  char *text;
  void *sdict;
  sam_hrecs_t *hrecs;
  uint32_t ref_count;
} sam_hdr_t;
typedef struct bam1_core_t {
  hts_pos_t pos;
  int32_t tid;
  uint16_t bin; 
  uint8_t qual;
  uint8_t l_extranul;
  uint16_t flag;
  uint16_t l_qname;
  uint32_t n_cigar;
  int32_t l_qseq;
  int32_t mtid;
  hts_pos_t mpos;
  hts_pos_t isize;
} bam1_core_t;
typedef struct bam1_t {
  bam1_core_t core;
  uint64_t id;
  uint8_t *data;
  int l_data;
  uint32_t m_data;
  uint32_t mempolicy : 2, : 30 ;
} bam1_t;
HTSLIB_EXPORT
int sam_hdr_find_tag_pos(sam_hdr_t *h, const char *type, int pos,
                         const char *key, kstring_t *ks);
HTSLIB_EXPORT
int sam_hdr_remove_tag_id(sam_hdr_t *h, const char *type, const char *ID_key,
                          const char *ID_value, const char *key);
HTSLIB_EXPORT
int sam_hdr_name2tid(sam_hdr_t *h, const char *ref);
HTSLIB_EXPORT
const char *sam_hdr_tid2name(const sam_hdr_t *h, int tid);
HTSLIB_EXPORT
hts_pos_t sam_hdr_tid2len(const sam_hdr_t *h, int tid);
static inline int bam_name2id(sam_hdr_t *h, const char *ref) {
  return sam_hdr_name2tid(h, ref);
}
HTSLIB_EXPORT
const char *sam_hdr_pg_id(sam_hdr_t *h, const char *name);
HTSLIB_EXPORT
char *stringify_argv(int argc, char *argv[]);
HTSLIB_EXPORT
void sam_hdr_incr_ref(sam_hdr_t *h);
HTSLIB_EXPORT
bam1_t *bam_init1(void);
HTSLIB_EXPORT
void bam_destroy1(bam1_t *b);
static inline void bam_set_mempolicy(bam1_t *b, uint32_t policy) {
  b->mempolicy = policy;
}
static inline uint32_t bam_get_mempolicy(bam1_t *b) { return b->mempolicy; }
HTSLIB_EXPORT
int bam_read1(BGZF *fp, bam1_t *b) HTS_RESULT_USED;
HTSLIB_EXPORT
int bam_write1(BGZF *fp, const bam1_t *b) HTS_RESULT_USED;
HTSLIB_EXPORT
bam1_t *bam_copy1(bam1_t *bdst, const bam1_t *bsrc) HTS_RESULT_USED;
HTSLIB_EXPORT
bam1_t *bam_dup1(const bam1_t *bsrc);
HTSLIB_EXPORT
int bam_set1(bam1_t *bam, size_t l_qname, const char *qname, uint16_t flag,
             int32_t tid, hts_pos_t pos, uint8_t mapq, size_t n_cigar,
             const uint32_t *cigar, int32_t mtid, hts_pos_t mpos,
             hts_pos_t isize, size_t l_seq, const char *seq, const char *qual,
             size_t l_aux);
HTSLIB_EXPORT
hts_pos_t bam_cigar2qlen(int n_cigar, const uint32_t *cigar);
HTSLIB_EXPORT
hts_pos_t bam_cigar2rlen(int n_cigar, const uint32_t *cigar);
HTSLIB_EXPORT
hts_pos_t bam_endpos(const bam1_t *b);
HTSLIB_EXPORT
int bam_str2flag(const char *str); 
HTSLIB_EXPORT
char *bam_flag2str(int flag); 
HTSLIB_EXPORT
int bam_set_qname(bam1_t *b, const char *qname);
HTSLIB_EXPORT
ssize_t sam_parse_cigar(const char *in, char **end, uint32_t **a_cigar,
                        size_t *a_mem);
HTSLIB_EXPORT
ssize_t bam_parse_cigar(const char *in, char **end, bam1_t *b);
HTSLIB_EXPORT
int sam_idx_init(htsFile *fp, sam_hdr_t *h, int min_shift, const char *fnidx);
HTSLIB_EXPORT
int sam_idx_save(htsFile *fp) HTS_RESULT_USED;
HTSLIB_EXPORT
hts_idx_t *sam_index_load(htsFile *fp, const char *fn);
HTSLIB_EXPORT
hts_idx_t *sam_index_load2(htsFile *fp, const char *fn, const char *fnidx);
HTSLIB_EXPORT
hts_idx_t *sam_index_load3(htsFile *fp, const char *fn, const char *fnidx,
                           int flags);
HTSLIB_EXPORT
int sam_index_build(const char *fn, int min_shift) HTS_RESULT_USED;
HTSLIB_EXPORT
int sam_index_build2(const char *fn, const char *fnidx,
                     int min_shift) HTS_RESULT_USED;
HTSLIB_EXPORT
int sam_index_build3(const char *fn, const char *fnidx, int min_shift,
                     int nthreads) HTS_RESULT_USED;
HTSLIB_EXPORT
hts_itr_t *sam_itr_queryi(const hts_idx_t *idx, int tid, hts_pos_t beg,
                          hts_pos_t end);
HTSLIB_EXPORT
hts_itr_t *sam_itr_querys(const hts_idx_t *idx, sam_hdr_t *hdr,
                          const char *region);