hts_mojo/_ffi/sam.mojo


def sam_hdr_find_tag_pos(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], pos: c_int, key: UnsafePointer[c_char, ImmutExternalOrigin], ks: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_find_tag_pos", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin]](h, type, pos, key, ks)

def sam_hdr_remove_tag_id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], ID_key: UnsafePointer[c_char, ImmutExternalOrigin], ID_value: UnsafePointer[c_char, ImmutExternalOrigin], key: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_remove_tag_id", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, type, ID_key, ID_value, key)

def sam_hdr_name2tid(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], ref_: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_name2tid", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, ref_)

def sam_hdr_tid2name(h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin], tid: c_int) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["sam_hdr_tid2name", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin], c_int](h, tid)

def sam_hdr_tid2len(h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin], tid: c_int) abi("C") -> hts_pos_t:
    return external_call["sam_hdr_tid2len", hts_pos_t, UnsafePointer[sam_hdr_t, ImmutExternalOrigin], c_int](h, tid)

def bam_name2id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], ref_: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_name2id", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, ref_)

def sam_hdr_pg_id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], name: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["sam_hdr_pg_id", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, name)


def stringify_argv(argc: c_int, argv: UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin]) abi("C") -> UnsafePointer[c_char, MutExternalOrigin]:
    return external_call["stringify_argv", UnsafePointer[c_char, MutExternalOrigin], c_int, UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin]](argc, argv)

def sam_hdr_incr_ref(h: UnsafePointer[sam_hdr_t, MutExternalOrigin]) abi("C") -> None:
    external_call["sam_hdr_incr_ref", NoneType, UnsafePointer[sam_hdr_t, MutExternalOrigin]](h)

def bam_init1() abi("C") -> UnsafePointer[bam1_t, MutExternalOrigin]:
    return external_call["bam_init1", UnsafePointer[bam1_t, MutExternalOrigin]]()

def bam_destroy1(b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> None:
    external_call["bam_destroy1", NoneType, UnsafePointer[bam1_t, MutExternalOrigin]](b)

def bam_set_mempolicy(b: UnsafePointer[bam1_t, MutExternalOrigin], policy: uint32_t) abi("C") -> None:
    external_call["bam_set_mempolicy", NoneType, UnsafePointer[bam1_t, MutExternalOrigin], uint32_t](b, policy)

def bam_get_mempolicy(b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> uint32_t:
    return external_call["bam_get_mempolicy", uint32_t, UnsafePointer[bam1_t, MutExternalOrigin]](b)

def bam_read1(fp: UnsafePointer[BGZF, MutExternalOrigin], b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_read1", c_int, UnsafePointer[BGZF, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin]](fp, b)

def bam_write1(fp: UnsafePointer[BGZF, MutExternalOrigin], b: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_write1", c_int, UnsafePointer[BGZF, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin]](fp, b)

def bam_copy1(bdst: UnsafePointer[bam1_t, MutExternalOrigin], bsrc: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[bam1_t, MutExternalOrigin]:
    return external_call["bam_copy1", UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin]](bdst, bsrc)

def bam_dup1(bsrc: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[bam1_t, MutExternalOrigin]:
    return external_call["bam_dup1", UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[bam1_t, ImmutExternalOrigin]](bsrc)

def bam_set1(bam: UnsafePointer[bam1_t, MutExternalOrigin], l_qname: size_t, qname: UnsafePointer[c_char, ImmutExternalOrigin], flag: uint16_t, tid: int32_t, pos: hts_pos_t, mapq: uint8_t, n_cigar: size_t, cigar: UnsafePointer[uint32_t, ImmutExternalOrigin], mtid: int32_t, mpos: hts_pos_t, isize: hts_pos_t, l_seq: size_t, seq: UnsafePointer[c_char, ImmutExternalOrigin], qual: UnsafePointer[c_char, ImmutExternalOrigin], l_aux: size_t) abi("C") -> c_int:
    return external_call["bam_set1", c_int, UnsafePointer[bam1_t, MutExternalOrigin], size_t, UnsafePointer[c_char, ImmutExternalOrigin], uint16_t, int32_t, hts_pos_t, uint8_t, size_t, UnsafePointer[uint32_t, ImmutExternalOrigin], int32_t, hts_pos_t, hts_pos_t, size_t, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], size_t](bam, l_qname, qname, flag, tid, pos, mapq, n_cigar, cigar, mtid, mpos, isize, l_seq, seq, qual, l_aux)

def bam_cigar2qlen(n_cigar: c_int, cigar: UnsafePointer[uint32_t, ImmutExternalOrigin]) abi("C") -> hts_pos_t:
    return external_call["bam_cigar2qlen", hts_pos_t, c_int, UnsafePointer[uint32_t, ImmutExternalOrigin]](n_cigar, cigar)

def bam_cigar2rlen(n_cigar: c_int, cigar: UnsafePointer[uint32_t, ImmutExternalOrigin]) abi("C") -> hts_pos_t:
    return external_call["bam_cigar2rlen", hts_pos_t, c_int, UnsafePointer[uint32_t, ImmutExternalOrigin]](n_cigar, cigar)

def bam_endpos(b: UnsafePointer[bam1_t, ImmutExternalOrigin]) abi("C") -> hts_pos_t:
    return external_call["bam_endpos", hts_pos_t, UnsafePointer[bam1_t, ImmutExternalOrigin]](b)

def bam_str2flag(str: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_str2flag", c_int, UnsafePointer[c_char, ImmutExternalOrigin]](str)

def bam_flag2str(flag: c_int) abi("C") -> UnsafePointer[c_char, MutExternalOrigin]:
    return external_call["bam_flag2str", UnsafePointer[c_char, MutExternalOrigin], c_int](flag)

def bam_set_qname(b: UnsafePointer[bam1_t, MutExternalOrigin], qname: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_set_qname", c_int, UnsafePointer[bam1_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](b, qname)

def sam_parse_cigar(in_: UnsafePointer[c_char, ImmutExternalOrigin], end: UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], a_cigar: UnsafePointer[UnsafePointer[uint32_t, MutExternalOrigin], MutExternalOrigin], a_mem: UnsafePointer[size_t, MutExternalOrigin]) abi("C") -> ssize_t:
    return external_call["sam_parse_cigar", ssize_t, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], UnsafePointer[UnsafePointer[uint32_t, MutExternalOrigin], MutExternalOrigin], UnsafePointer[size_t, MutExternalOrigin]](in_, end, a_cigar, a_mem)

def bam_parse_cigar(in_: UnsafePointer[c_char, ImmutExternalOrigin], end: UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], b: UnsafePointer[bam1_t, MutExternalOrigin]) abi("C") -> ssize_t:
    return external_call["bam_parse_cigar", ssize_t, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin], UnsafePointer[bam1_t, MutExternalOrigin]](in_, end, b)

def sam_idx_init(fp: UnsafePointer[htsFile, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, MutExternalOrigin], min_shift: c_int, fnidx: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_idx_init", c_int, UnsafePointer[htsFile, MutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], c_int, UnsafePointer[c_char, ImmutExternalOrigin]](fp, h, min_shift, fnidx)

def sam_idx_save(fp: UnsafePointer[htsFile, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_idx_save", c_int, UnsafePointer[htsFile, MutExternalOrigin]](fp)

def sam_index_load(fp: UnsafePointer[htsFile, MutExternalOrigin], fn_: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[hts_idx_t, MutExternalOrigin]:
    return external_call["sam_index_load", UnsafePointer[hts_idx_t, MutExternalOrigin], UnsafePointer[htsFile, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](fp, fn_)

def sam_index_load2(fp: UnsafePointer[htsFile, MutExternalOrigin], fn_: UnsafePointer[c_char, ImmutExternalOrigin], fnidx: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[hts_idx_t, MutExternalOrigin]:
    return external_call["sam_index_load2", UnsafePointer[hts_idx_t, MutExternalOrigin], UnsafePointer[htsFile, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](fp, fn_, fnidx)

def sam_index_load3(fp: UnsafePointer[htsFile, MutExternalOrigin], fn_: UnsafePointer[c_char, ImmutExternalOrigin], fnidx: UnsafePointer[c_char, ImmutExternalOrigin], flags: c_int) abi("C") -> UnsafePointer[hts_idx_t, MutExternalOrigin]:
    return external_call["sam_index_load3", UnsafePointer[hts_idx_t, MutExternalOrigin], UnsafePointer[htsFile, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int](fp, fn_, fnidx, flags)

def sam_index_build(fn_: UnsafePointer[c_char, ImmutExternalOrigin], min_shift: c_int) abi("C") -> c_int:
    return external_call["sam_index_build", c_int, UnsafePointer[c_char, ImmutExternalOrigin], c_int](fn_, min_shift)

def sam_index_build2(fn_: UnsafePointer[c_char, ImmutExternalOrigin], fnidx: UnsafePointer[c_char, ImmutExternalOrigin], min_shift: c_int) abi("C") -> c_int:
    return external_call["sam_index_build2", c_int, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int](fn_, fnidx, min_shift)

def sam_index_build3(fn_: UnsafePointer[c_char, ImmutExternalOrigin], fnidx: UnsafePointer[c_char, ImmutExternalOrigin], min_shift: c_int, nthreads: c_int) abi("C") -> c_int:
    return external_call["sam_index_build3", c_int, UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, c_int](fn_, fnidx, min_shift, nthreads)

def sam_itr_queryi(idx: UnsafePointer[hts_idx_t, ImmutExternalOrigin], tid: c_int, beg: hts_pos_t, end: hts_pos_t) abi("C") -> UnsafePointer[hts_itr_t, MutExternalOrigin]:
    return external_call["sam_itr_queryi", UnsafePointer[hts_itr_t, MutExternalOrigin], UnsafePointer[hts_idx_t, ImmutExternalOrigin], c_int, hts_pos_t, hts_pos_t](idx, tid, beg, end)

def sam_itr_querys(idx: UnsafePointer[hts_idx_t, ImmutExternalOrigin], hdr: UnsafePointer[sam_hdr_t, MutExternalOrigin], region: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[hts_itr_t, MutExternalOrigin]:
    return external_call["sam_itr_querys", UnsafePointer[hts_itr_t, MutExternalOrigin], UnsafePointer[hts_idx_t, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](idx, hdr, region)
